2003-05-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the Extract button when its pressed.

2003-05-29  Ross Burton  <ross@burtonini.com>

	* src/sj-musicbrainz.c:
	Fix a typo so that multiple artist albums should work.

2003-05-28  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	Updated from libbacon.

	* TODO: Updated.

2003-05-25  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added portuguese (pt) to ALL_LINGUAS.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Check if the file exists before extracting, and ask the user what
	they want to do.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Rename the Deselect All menu item.

2003-05-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Rename the metadata caps, and pull the encoder construction apart
	a little more, ready for future enhancements. Vorbis quality now
	0.6, much better. :)

	* src/sj-main.c:
	Disable the Deselect All menu item as appropriate.

2003-05-21  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-05-20  Ross Burton  <ross@burtonini.com>

	* tests/mb-test.c: 
	Update for new SjMusicbrainz API.

2003-05-20  Ross Burton  <ross@burtonini.com>

	* NEWS:
	Updated

	* configure.in:
	Check for all of the audio encoders we use, and bump the version
	number.

2003-05-17  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs (Czech) to ALL_LINGUAS.

2003-05-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Removed Pango markup from translatable strings. Closes #112929.

2003-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fixed some typos. Closes #112933.

2003-05-14  Ross Burton  <ross@burtonini.com>

	* README:
	* TODO:
	Updated

	* src/sj-musicbrainz.[ch]:
	Re-arrange slightly so a single Musicbrainz object is used all the
	time, instead of re-creating it.

	* src/sj-extractor.[ch]: