@@ -1,3 +1,14 @@
+2003-05-30  Ross Burton  <ross@burtonini.com>
+ 
+        * src/sj-extracting.c:
+        Add : to the list of stripped characters as it really annoys
+        Windows machines. Damn them.
+ 
+        * src/sj-prefs.c:
+        * src/sj-main.c:
+        Change the "number - title" filename format to use zero-padded
+        numbers so it sorts correctly.
+ 
 2003-05-29  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
